[package]
name = "async-sse-loader"
version = "0.1.0"
authors = ["Auryn Engel <auryn.engel@sap.com>"]
edition = "2018"
repository = "https://github.com/auryn31/rust-async-sse-loader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10.7", features=["stream"]}
serde_json = "1.0"
serde = {version = "1.0.114", features = ["derive"]}
futures = "0.3.5"
bytes = "0.5.6"
futures-core = "0.3.5"

[dev-dependencies]
tokio = {version = "0.2.22", features=["macros"]}